# lart

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
examples/: alien_writings.rs  circle_packing.rs  differential_line.rs  genuary2023_asemic.rs  genuary2023_glitchy_rects.rs  genuary2023_kusama.rs  genuary2023_minmax.rs  genuary2023_music.rs  genuary2023_reflections.rs  genuary2023_shadow.rs  genuary2023_sine_wave.rs  genuary2023_suprematism.rs  genuary2023_tessellation.rs  genuary2023_textile.rs  oned.rs  ptpx_2022.rs  snowflake.rs  splines.rs  split.rs  wcc_chemistry.rs  wcc_crystals.rs  wcc_wiggly.rs  xmas_tree.rs
include/: lart.h
lart-sketches/: Cargo.toml
lart-sketches/examples/: genuary2023_glitchy_rects.rs  genuary2023_shadow.rs  genuary2023_textile.rs  genuary2024_hexagonal.rs  genuary2024_vera_molnar.rs  split.rs  wcc_chemistry.rs  wcc_crystals.rs  xmas_tree.rs
lart-viewer/: Cargo.toml
lart-viewer/src/: main.rs  rpc.rs  schema.rs  sketch.rs
lart/include/: lart.h
lart/src/: lib.rs
lart/src/algo/: sample.rs  split.rs
lart/src/geo/: bool_ops.rs  geometry.rs  path.rs  rect.rs  types.rs
lart/src/sketch/: mod.rs  parms.rs  rpc.rs
skv/: setup.py
skv/skv/: skv.py
src/: lib.rs
src/algo/: chaikin.rs  circle_packing.rs  convex_hull.rs  kmeans.rs  mod.rs  simplify.rs  spline.rs  split.rs  voro_tri.rs  wfc.rs
src/geo/: bool_ops.rs  geometry.rs  grid.rs  lart.cpp  line.rs  mod.rs  path.rs  polygon.rs  quadtree.rs  rect.rs  types.rs  utils.rs  v.rs  xform.rs
src/geo/utils/: fkey.rs  (+1 more)
src/sketch/: hatching.rs  mod.rs  parms.rs  vpype.rs
(+5 files in other folders)
